@@ -48,8 +48,6 @@
 #include "FRenderInit.h"
 #include "Fcursor.h"
 #include "FImage.h"
-#include "fvwm/fvwm.h"
-#include "fvwm/misc.h"
 
 /* ---------------------------- local definitions -------------------------- */
 #define FIMAGE_CMD_ARGS \
@@ -174,8 +172,8 @@ Bool PImageLoadSvg(FIMAGE_CMD_ARGS)
 
 	if (!USE_SVG)
 	{
-		fvwm_msg(WARN, "PImageLoadSvg", "Tried to load SVG file "
-				"when FVWM has not been compiled with SVG support.");
+		fprintf(stderr, "[PImageLoadSvg]: Tried to load SVG file "
+				"when FVWM has not been compiled with SVG support.\n");
 		return False;
 	}
 
@@ -414,8 +412,8 @@ Bool PImageLoadPng(FIMAGE_CMD_ARGS)
 		/* suppress compiler warning */
 		bit_depth = 0;
 
-		fvwm_msg(WARN, "PImageLoadPng", "Tried to load PNG file "
-				"when FVWM has not been compiled with PNG support.");
+		fprintf(stderr, "[PImageLoadPng]: Tried to load PNG file "
+				"when FVWM has not been compiled with PNG support.\n");
 
 		return False;
 	}
@@ -567,8 +565,8 @@ Bool PImageLoadXpm(FIMAGE_CMD_ARGS)
 
 	if (!XpmSupport)
 	{
-		fvwm_msg(WARN, "PImageLoadXpm", "Tried to load XPM file "
-				"when FVWM has not been compiled with XPm Support.");
+		fprintf(stderr, "[PImageLoadXpm]: Tried to load XPM file "
+				"when FVWM has not been compiled with XPm Support.\n");
 		return False;
 	}
 	memset(&xpm_im, 0, sizeof(FxpmImage));
