@@ -1,3 +1,8 @@
+2012-05-04  Thomas Adam  <thomas@fvwm.org>
+	* libs/PictureImageLoader.c (PImageLoadSvg, PimageLoadXpm,
+	  PImageLoadPng):
+	  Fix compilation errors.
+
 2012-05-02  Thomas Adam  <thomas@fvwm.org>
 	* fvwm/menu.c ( __scan_for_pixmap):
 	* libs/PictureImageLoader.c (PImageLoadSvg, PimageLoadXpm,
